<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Crush</string>
    <string name="play">Play</string>
    <string name="level">Level %d</string>
    <string name="score">Score</string>
    <string name="moves">Moves</string>
    <string name="target">Target</string>
    <string name="level_complete">Level Complete!</string>
    <string name="no_moves">No Moves Left</string>
    <string name="try_again">Try Again</string>
    <string name="next_level">Next Level</string>
    <string name="main_menu">Main Menu</string>
    <string name="select_level">Select Level</string>
    <string name="locked">Locked</string>
</resources>
